namespace HollowKnight.Enemies
{
    public enum MantisLordSlot
    {
        Left,
        Middle,
        Right
    }
}
